// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup should be rendered correctly 1`] = `
<fieldset
  className="uui-vertical-direction root container"
>
  <label
    className="container root size-18 color-sky theme-light -clickable"
  >
    <div
      className="uui-radioinput"
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        tabIndex={0}
        type="radio"
      />
    </div>
    <div
      className="uui-input-label"
      role="label"
    >
      Test1
    </div>
  </label>
  <label
    className="container root size-18 color-sky theme-light -clickable"
  >
    <div
      className="uui-radioinput"
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        tabIndex={0}
        type="radio"
      />
    </div>
    <div
      className="uui-input-label"
      role="label"
    >
      Test2
    </div>
  </label>
</fieldset>
`;

exports[`RadioGroup should be rendered correctly with props 1`] = `
<fieldset
  className="uui-horizontal-direction root container"
>
  <label
    className="container uui-disabled root size-18 color-sky theme-light"
  >
    <div
      className="uui-radioinput"
    >
      <input
        aria-checked={false}
        checked={false}
        disabled={true}
        onChange={[Function]}
        tabIndex={0}
        type="radio"
      />
    </div>
    <div
      className="uui-input-label"
      role="label"
    >
      Test1
    </div>
  </label>
  <label
    className="container uui-disabled root size-18 color-sky theme-light"
  >
    <div
      className="uui-radioinput"
    >
      <input
        aria-checked={false}
        checked={false}
        disabled={true}
        onChange={[Function]}
        tabIndex={0}
        type="radio"
      />
    </div>
    <div
      className="uui-input-label"
      role="label"
    >
      Test2
    </div>
  </label>
</fieldset>
`;
